updated join scheme to be hash instead of search

--- a/_includes/sections/joinzone.html
+++ b/_includes/sections/joinzone.html
@@ -8,7 +8,7 @@
         <h3>
             <script>
                 var url = new URL(document.location.toString());
-                document.write(url.search.slice(1))
+                document.write(url.hash.slice(1))
             </script>
         </h3>
         <br>
