--- a/_includes/sections/joinzone.html
+++ b/_includes/sections/joinzone.html
@@ -1,7 +1,7 @@
 <script>
     var url = new URL(document.location.toString());
     if (url.hash.slice(1).length != 75) {
-        window.location.href = '../';
+        window.location.href = './';
     }
 </script>
 <section style="transform: scale(0.90, 0.90); zoom: 0.90; zoom: 90%;" id="joinzone">
