--- a/_includes/sections/joinzone.html
+++ b/_includes/sections/joinzone.html
@@ -29,9 +29,7 @@
 </script>
 
 <section class="outer" id="download">
-    <br>
-    <br>
-    <br>
+    <div class="middle"></div>
     <div class="middle container text-center">
         <div class="inner">
             <h2 class="site-section__title">Join Code</h2>
@@ -88,7 +86,5 @@
             </div>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
+    <div class="middle"></div>
 </section>
