--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -106,7 +106,7 @@ function DoTheRedirect(url) { window.location=url; }
                             <li>
                               {% if download.link %}
                                  <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ site.d-drive.download-base }}{{ download.link }}">{{ download.name }}</a><br/>
-                                 <p><span class="sha">{{ download.sha }}</span></p>
+                                 <span class="sha">{{ download.sha }}</span>
                               {% else %}
                                  {% if download.ext-link %}
                                     <a onclick="ThankYouRedirect('{{ site.d-drive.thank-you-for-downloading }}')" href="{{ download.ext-link }}" target="_blank">{{ download.name }}</a><br/>
