--- a/css/style.css
+++ b/css/style.css
@@ -8860,6 +8860,7 @@ section.download-section .download-popup .popup .popup-content .action-descripti
 section.download-section .download-popup .popup .popup-content .action-description ul.downloads span.sha {
   font-family: monospace;
   font-size: 80%;
+  word-break: break-word;
 }
 
 /**
