--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -129,6 +129,11 @@ function DoTheRedirect(url) { window.location=url; }
     <div class="download">
         <div class="container">
             <div class="row">
+                <div class="download-description">
+                    For Developers:
+                </div>
+            </div>
+            <div class="row">
                 <div class="download__left col-sm-6 col-md-4">
                     <div class="download-title">
                         <img class="icon" src="{{ site.diode-cli.icon }}" />
