--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -130,7 +130,7 @@ function DoTheRedirect(url) { window.location=url; }
         <div class="container">
             <div class="row">
                 <div class="download-description">
-                    <u>For Developers and IT Admins:</>
+                    <u>For Developers and IT Admins:</u>
                 </div>
             </div>
             <div class="row">
