--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -128,7 +128,7 @@ function DoTheRedirect(url) { window.location=url; }
     <div id="diode-cli-download" style="position:relative; top:-80px;"></div>
     <div class="download">
         <div class="container">
-            <div class="row">
+            <div>
                 <div class="download-description">
                     <u>For Developers and IT Admins:</u>
                 </div>
