--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -30,7 +30,7 @@ function DoTheRedirect(url) { window.location=url; }
                     </div>
                     <p class="hidden-sm hidden-md hidden-lg">{{ site.d-drive.description }}</p>
                     <div class="download-action">
-                        <a class="button hide JSButton" id="download_button">Download the Beta</a>
+                        <a class="button hide JSButton" id="download_button">Download</a>
                         <noscript>Select your download:</noscript>
                     </div>
                 </div>
